<resources>
    <string name="app_name">SnowboardTrickGuide</string>
    <string name="category_q_text">Pick a category</string>
    <string name="approach_stance_q_text">What stance is the trick approached on?</string>
    <string name="any_spins_q_text">Were any spins performed?</string>
    <string name="rotation_direction_q_text">What direction of rotation?</string>
    <string name="many_spins_q_text">How many degrees of rotation are performed in the air before landing?</string>
    <string name="grab_performed_q_text">Was a grab performed in the air?</string>
    <string name="select_grab_q_text">What grab?</string>
    <string name="shifty_performed_q_text">Was a shifty performed while in the air?</string>
    <string name="inversion_performed_q_text">Was there any inversion?</string>
    <string name="inversion_dir_q_text">Direction of inversion?</string>
    <string name="num_flips_q_text">Number of flips?</string>
    <string name="pop_used_q_text">What pop is used to get off the ground?</string>
    <string name="type_of_jib_q_text">What type of jib?</string>
    <string name="type_of_feature_q_text">What type of feature is the trick done on?</string>
    <string name="side_of_feature_approach_q_text">What direction is the feature approached on?</string>
    <string name="rotation_on_less_180_q_text">Is the rotation getting onto the feature less than a full 180 degree turn?</string>
    <string name="type_slide_on_feature_q_text">What way is the board initially on the feature?</string>
    <string name="press_performed_on_feature_q_text">Is a press performed while on the feature?</string>
    <string name="type_press_q_text">What type of press?</string>
    <string name="rotation_off_more_180_q_text">Is an about 180 degree rotation or more performed while coming off of the feature?</string>
    <string name="tap_performed_out_q_text">Is a tail or nose tap performed while coming off of the feature?</string>
    <string name="nose_tail_tap_out_q_text">Is the feature tapped with the nose or the tail?</string>
    <string name="part_board_on_top_feature_q_text">What part of the board is on top of the feature?</string>
    <string name="rotation_off_90_less_q_text">Is the rotation after coming off of the feature about 90 degrees or less?</string>
    <string name="position_landed_off_feature_q_text">What way is the trick landed after coming off the feature?</string>
    <string name="rotation_off_270_q_text">Is the rotation after coming off of the feature about 270 degrees?</string>
    <string name="rotation_same_opposite_q_text">Is the direction of rotation the same or opposite direction of rotation of the previous move?</string>
    <string name="select_rotation_amount_off_q_text">Which amount of rotation is about what is performed coming off of the feature?</string>
    <string name="select_rotation_amount_on_q_text">Which amount of rotation is about what is performed getting onto the feature?</string>
    <string name="board_pass_over_feature_q_text">Does the front or the back of the board pass over the feature first?</string>
    <string name="more_180_continued_on_feature_q_text">Is more than a 180 degree spin continued while on the feature?</string>
    <string name="total_spins_q_text">How many spins in total were performed from start to beginning of the trick?</string>
    <string name="spins_before_feature_q_text">How many spins are performed in the air before landing on the feature?</string>
    <string name="spins_after_feature_q_text">How many spins are performed in the air after getting off the feature?</string>
    <string name="before_stall_feature_180_q_text">Is a 180 degree rotation done in the air before hitting the stall on the feature?</string>
    <string name="after_stall_feature_180_q_text">Is a 180 degree rotation done just after stalling on the feature?</string>
    <string name="board_contact_feature_stall_q_text">What part of the board is in contact to the feature when fully stalled on the feature?</string>
    <string name="press_back_foot_stall_q_text">Is a press over the trailing foot performed while stalled?</string>
    <string name="feature_tapped_q_text">What type of feature is being tapped?</string>
    <string name="feature_q_text">What feature?</string>
    <string name="board_on_off_ground_q_text">Does the board stay on the ground through during the trick or gets off the ground?</string>
    <string name="side_board_pressed_q_text">Which side of the board is being pressed at the beginning of the trick?</string>
    <string name="any_rotation_q_text">Is any rotation performed during this trick?</string>
    <string name="pause_90_q_text">Is there a pause in the rotation at about 90 degrees of rotation?</string>
    <string name="either_90_or_270_opposite_q_text">Is the rotation after the pause: 90 degrees in either direction or 270 degrees in the opposite direction?</string>
    <string name="last_90_rotation_direction_q_text">Is the last 90 degree rotation the same or opposite direction of the last rotation?</string>
    <string name="many_spins_in_press_q_text">How many degrees of rotation are preformed while pressed?</string>
    <string name="either_90_or_270_same_q_text">Is the rotation after the pause: 90 degrees in either direction or 270 degrees in the same direction?</string>
    <string name="hands_on_ground_behind_q_text">Are one or both hands being put on the ground behind the board?</string>
    <string name="hands_ground_back_leg_extended_q_text">Does the back leg stay extended when the hands are on the ground or bent?</string>
    <string name="hands_ground_some_point_q_text">Are one or both hands on the ground at some point in this trick?</string>
    <string name="rotation_180_or_360_q_text">Is a 180 degree or 360 degree rotation made during this trick?</string>
    <string name="rotation_90_less_q_text">Is the rotation done about 90 degrees or less, including no rotation?</string>
    <string name="approached_up_incline_q_text">Is the trick approached going up an incline and performed at the top of transitioning back down it?</string>
    <string name="nose_press_grabbing_tail_q_text">Is the nose of the board pressed hard into the ground and the back hand grabbing anywhere around the tail?</string>
    <string name="tail_press_grabbing_nose_q_text">Is the tail of the board pressed hard into the ground and the front hand grabbing anywhere around the nose?</string>
    <string name="aerial_button_text">Aerial</string>
    <string name="jibb_button_text">Jib</string>
    <string name="butter_button_text">Butter</string>
    <string name="other_button_text">Other</string>
    <string name="switch_button_text">Switch</string>
    <string name="natural_button_text">Natural</string>
    <string name="skip_button_text">Skip</string>
    <string name="yes_button_text">Yes</string>
    <string name="no_button_text">No</string>
    <string name="ollie_button_text">Ollie</string>
    <string name="nollie_button_text">Nollie</string>
    <string name="straight_button_text">Straight</string>
    <string name="frontside_button_text">Frontside</string>
    <string name="backside_button_text">Backside</string>
    <string name="straight_on_button_text">Straight On</string>
    <string name="no_rotation_button_text">No Rotation</string>
    <string name="front_button_text">Front</string>
    <string name="back_button_text">Back</string>
    <string name="slide_button_text">Slide</string>
    <string name="stall_button_text">Stall</string>
    <string name="tap_button_text">Tap</string>
    <string name="box_button_text">Box</string>
    <string name="rail_button_text">Rail</string>
    <string name="pipe_button_text">Pipe</string>
    <string name="fifty_fifty_button_text">50-50</string>
    <string name="boardslide_button_text">Boardslide</string>
    <string name="lipslide_button_text">Lipslide</string>
    <string name="tail_press_button_text">Tail Press</string>
    <string name="nose_press_button_text">Nose Press</string>
    <string name="nose_button_text">Nose</string>
    <string name="tail_button_text">Tail</string>
    <string name="leading_foot_button_text">Leading Foot</string>
    <string name="trailing_foot_button_text">Trailing Foot</string>
    <string name="inbetween_feet_button_text">In between Feet</string>
    <string name="same_button_text">Same</string>
    <string name="opposite_button_text">Opposite</string>
    <string name="num_450_button_text">450</string>
    <string name="num_630_button_text">630</string>
    <string name="num_180_button_text">180</string>
    <string name="num_270_button_text">270</string>
    <string name="num_90_button_text">90</string>
    <string name="num_360_button_text">360</string>
    <string name="on_the_ground_button_text">On the ground</string>
    <string name="off_the_ground_button_text">Off the ground</string>
    <string name="extended_button_text">Extended</string>
    <string name="bent_button_text">Bent</string>
    <string name="select_button_text">Select</string>
    <string name="save_button_text">Save</string>
    <string name="continue_button_text">Continue</string>
    <string name="restart_button_text">Restart</string>
    <string name="complete_button_text">Complete</string>
    <string name="close_button_text">Close</string>
    <string name="shorten_button_text">Shorten</string>
    <string name="lengthen_button_text">Lengthen</string>
    <string name="try_again_button_text">Try again</string>
    <string name="important_button_text">Important</string>
    <string name="ok_button_text">OK</string>
    <string name="order_button_text">Order</string>
    <string name="find_trick_button_text">Define And Find a Trick</string>
    <string name="tricks_completed_button_text">Tricks Completed</string>
    <string name="tricks_to_do_button_text">Tricks To Do</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="category_description_text">
        Choose the category of trick that the trick you are looking for falls under.
    </string>
    <string name="hold_button_text">Try holding down on the answers to see a more detailed description of what it is</string>
    <string name="add_trick_manually_button_text">Add trick manually</string>
    <string name="info_button_text">Info</string>
    <string name="settings_button_text">Settings</string>
    <string name="to_do_button_text">To Do</string>
    <string name="delete_selected_button_text">Delete selected</string>
    <string name="move_to_to_do_list">Move to To Do List</string>
    <string name="search_in_list_action">Search in List</string>
    <string name="move_to_completed_list">Move to Completed List</string>
    <string name="editor_what_list_text">Is this trick completed or something to do?</string>
    <string name="exit_activity_cd">Exit activity without saving anything</string>
    <string name="icon_editor_title_cd">Icon for the title of the trick that will be displayed in the list</string>
    <string name="icon_alternate_name_cd">Icon for the alternate name of the trick that will not be displayed</string>
    <string name="icon_editor_category_cd">Icon for the category of this trick</string>
    <string name="icon_date_cd">Icon for the date of the trick</string>
    <string name="icon_inlist_cd">Icon for what list the trick should be in</string>
    <string name="icon_notes_cd">Icon for the extra notes on this trick</string>
    <string name="editor_delete_cd">Permanently delete this trick</string>
    <string name="trick_name_editor_hint">Trick Name</string>
    <string name="alternate_name_editor_hint">Alternate naming of the trick</string>
    <string name="editor_category_hint">Trick category (Aerial, Jib, Butter, etc.)</string>
    <string name="editor_date_hint">Date of trick: mm/dd/yyyy</string>
    <string name="editor_notes_hint">Notes, descriptions, location, or information about this trick</string>
</resources>