<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/edit_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_above="@id/editor_buttons_LL">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/item_list_background"
                android:elevation="@dimen/section_elevation"
                android:paddingBottom="16dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:background="@color/white"
                    android:layout_gravity="top" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_from_screen_edge">

                    <ImageButton
                        android:id="@+id/editor_exit_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_clear24px"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/exit_activity_cd" />

                    <ImageButton
                        android:id="@+id/delete_trick_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_delete_24"
                        android:background="@android:color/transparent"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/editor_delete_cd" />

            </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_from_screen_edge"
                    android:layout_marginTop="32dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_title_24"
                        android:contentDescription="@string/icon_editor_title_cd" />

                    <EditText
                        android:id="@+id/regular_trick_name_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/editor_text_margin_from_icon"
                        android:hint="@string/trick_name_editor_hint"
                        style="@style/headline5"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:inputType="textCapWords|textMultiLine"
                        android:background="@android:color/transparent"
                        android:autofillHints="Trick Name"
                        android:layout_marginStart="@dimen/editor_text_margin_from_icon" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_from_screen_edge"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginEnd="@dimen/margin_from_screen_edge"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_short_text_24"
                        android:contentDescription="@string/icon_alternate_name_cd" />

                    <TextView
                        android:id="@+id/short_name_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/editor_text_margin_from_icon"
                        android:hint="@string/alternate_name_editor_hint"
                        style="@style/subtitle1"
                        android:background="@android:color/transparent"
                        android:layout_marginStart="@dimen/editor_text_margin_from_icon" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_from_screen_edge"
                    android:layout_marginTop="8dp"
                    android:gravity="end">

                    <Switch
                        android:id="@+id/set_display_name_short_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="Set displayed name to shortened version"
                        style="@style/subtitle2"
                        android:textStyle="italic"
                        android:textColor="@color/gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_from_screen_edge"
                    android:layout_marginTop="32dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_category_24"
                        android:contentDescription="@string/icon_editor_category_cd" />

                    <AutoCompleteTextView
                        android:id="@+id/category_trick_edittext"
                        style="@style/headline5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/editor_text_margin_from_icon"
                        android:background="@android:color/transparent"
                        android:hint="@string/editor_category_hint"
                        android:inputType="textCapWords|textMultiLine"
                        android:textSize="20sp"
                        android:layout_marginStart="@dimen/editor_text_margin_from_icon"
                        android:autofillHints="The category of trick this falls under" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_from_screen_edge"
                    android:layout_marginTop="32dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_today_24"
                        android:contentDescription="@string/icon_date_cd" />

                    <EditText
                        android:id="@+id/date_trick_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/editor_text_margin_from_icon"
                        android:hint="@string/editor_date_hint"
                        style="@style/headline5"
                        android:textSize="20sp"
                        android:maxLength="11"
                        android:inputType="date"
                        android:background="@android:color/transparent"
                        android:layout_marginStart="@dimen/editor_text_margin_from_icon"
                        android:autofillHints="The date given to this trick" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_from_screen_edge"
                    android:layout_marginTop="32dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_list_alt_24"
                        android:contentDescription="@string/icon_inlist_cd" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/editor_what_list_text"
                        android:layout_marginLeft="@dimen/editor_text_margin_from_icon"
                        android:gravity="center_vertical"
                        style="@style/subtitle2"
                        android:layout_marginStart="@dimen/editor_text_margin_from_icon" />

                </LinearLayout>

                <Switch
                    android:id="@+id/in_list_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="64dp"
                    android:showText="true"
                    android:textOn="@string/complete_button_text"
                    android:textOff="@string/to_do_button_text"
                    android:thumb="@drawable/in_list_switch_thumb"
                    android:track="@drawable/in_list_switch_track" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/item_list_background"
                android:elevation="@dimen/section_elevation"
                android:paddingVertical="16dp"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_from_screen_edge"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_description_24"
                        android:contentDescription="@string/icon_notes_cd" />

                    <EditText
                        android:id="@+id/notes_trick_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/editor_text_margin_from_icon"
                        android:hint="@string/editor_notes_hint"
                        style="@style/headline5"
                        android:textSize="20sp"
                        android:inputType="textCapSentences|textMultiLine"
                        android:background="@android:color/transparent"
                        android:layout_marginStart="@dimen/editor_text_margin_from_icon"
                        android:autofillHints="Miscellaneous notes of this trick" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/editor_buttons_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/edit_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_text"
            android:layout_weight="1"
            android:background="@drawable/edit_buttons_background"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/edit_save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save_button_text"
            android:layout_weight="1"
            android:background="@drawable/edit_buttons_background"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</RelativeLayout>