<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="my.apps.snowboardtrickguide.MainActivity">

    <include layout="@layout/bar_top" android:id="@+id/top_bar"/>

    <TextView
        android:id="@+id/category_title_textview"
        android:text="@string/category_q_text"
        app:layout_constraintBottom_toTopOf="@id/category_description_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        style="@style/TrickQuestionStyle"/>

    <TextView
        android:id="@+id/category_description_textview"
        style="@style/TrickQuestionDescriptionStyle"
        app:layout_constraintBottom_toTopOf="@id/yes_no_buttons_CL"
        app:layout_constraintRight_toRightOf="@id/category_title_textview"
        app:layout_constraintLeft_toLeftOf="@id/category_title_textview"
        app:layout_constraintTop_toBottomOf="@id/category_title_textview"
        android:text="@string/category_description_text"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/yes_no_buttons_CL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_description_textview">

        <View
            android:id="@+id/vertical_bar_view"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="16dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />
        <View
            android:id="@+id/horizontal_bar_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="16dp"
            android:background="@color/gray"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/topleft_button"
            android:text="@string/aerial_button_text"
            app:layout_constraintBottom_toTopOf="@id/horizontal_bar_view"
            app:layout_constraintEnd_toEndOf="@id/vertical_bar_view"
            app:layout_constraintStart_toStartOf="@id/horizontal_bar_view"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/AnswerButtonStyle"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/topright_button"
            app:layout_constraintBottom_toTopOf="@id/horizontal_bar_view"
            app:layout_constraintStart_toStartOf="@id/vertical_bar_view"
            app:layout_constraintEnd_toEndOf="@id/horizontal_bar_view"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/jibb_button_text"
            style="@style/AnswerButtonStyle"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bottomleft_button"
            app:layout_constraintStart_toStartOf="@id/horizontal_bar_view"
            app:layout_constraintEnd_toEndOf="@id/vertical_bar_view"
            app:layout_constraintTop_toBottomOf="@id/horizontal_bar_view"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/butter_button_text"
            style="@style/AnswerButtonStyle"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bottomright_button"
            app:layout_constraintStart_toStartOf="@id/vertical_bar_view"
            app:layout_constraintEnd_toEndOf="@id/horizontal_bar_view"
            app:layout_constraintTop_toBottomOf="@id/horizontal_bar_view"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/other_button_text"
            style="@style/AnswerButtonStyle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hold_button_text"
        app:layout_constraintTop_toBottomOf="@id/yes_no_buttons_CL"
        app:layout_constraintStart_toStartOf="@id/yes_no_buttons_CL"
        android:paddingHorizontal="@dimen/margin_from_screen_edge"
        android:gravity="center_horizontal"/>

</androidx.constraintlayout.widget.ConstraintLayout>